# octopuslb

./: AUTHORS  CHANGELOG  INSTALL  Makefile.am  README  README.md  TODO  configure.in  octopuslb.conf
extras/: octopuslb.fedora.spec  octopuslb.initd  octopuslb.logrotated  octopuslb.rhel.spec  octopuslb.service
man/: octopuslb-admin.1  octopuslb-server.1
src/: admin.c  algorithms.c  config.c  connect.c  init.c  logging.c  monitor.c  octopus.c  octopus.h  signals.c
tests/: sample.conf  test.rb
