#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(octopuslb, 1.14, http://octopuslb.sourceforge.net/)
#AM_INIT_AUTOMAKE([1.9 foreign])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_SRCDIR([src/octopus.h])
#AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_LANG_C

AC_ARG_ENABLE(snmp, [  --disable-snmp  		Disable snmp (Enabled by default)], [no_snmp=yes])
if test x"$no_snmp" != "xyes"; then
	AC_CHECK_LIB([netsnmp], [snmp_sess_init])
	if test x"${ac_cv_lib_netsnmp_snmp_sess_init}" = xno; then
		AC_MSG_ERROR(Library netsnmp not found. Please install SNMP development libraries or disable SNMP functionality by appending '--disable-snmp' to the configure command)
	fi
	#AC_SUBST(USE_SNMP, "1")
	AC_DEFINE(USE_SNMP, "1")
	
fi
	

# Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdlib.h string.h strings.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([bzero inet_ntoa memset mkdir select socket strchr strerror strtol epoll_create])

# Checks for libraries.
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
